@@ -430,7 +430,7 @@ div.thumb {
 	border-color: white;
 	width: auto;
 }
-div.thumb div {
+div.thumbinner {
 	border: 1px solid #ccc;
 	padding: 3px !important;
 	background-color: #f9f9f9;
@@ -438,10 +438,10 @@ div.thumb div {
 	text-align: center;
 	overflow: hidden;
 }
-div.thumb div a img {
+html .thumbimage {
 	border: 1px solid #ccc;
 }
-div.thumb div div.thumbcaption {
+html .thumbcaption {
 	border: none;
 	text-align: left;
 	line-height: 1.4em;
